--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "emoji-picker-react": "^4.15.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
